[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/graphic/dream/merry.png" type="Texture" id=1]
[ext_resource path="res://assets/graphic/dream/dreambgback.png" type="Texture" id=2]
[ext_resource path="res://assets/graphic/dream/dreambgfront.png" type="Texture" id=3]
[ext_resource path="res://assets/graphic/dream/dreambgclouds.png" type="Texture" id=4]
[ext_resource path="res://game/DreamWorld.gd" type="Script" id=5]

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

uniform float speed = 1.0;

void fragment() {
	COLOR = texture(TEXTURE, UV + vec2(speed* 0.01 *TIME, 0));
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 14 )
shader_param/speed = 1.0

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 581, 218, 0, 0, 0, 0, 602, 228 )
}

[sub_resource type="Curve2D" id=13]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 509, 218, 0, 0, 0, 0, 600, 229 )
}

[node name="DreamWorld" type="Node2D"]
script = ExtResource( 5 )

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Dreambgclouds" type="Sprite" parent="."]
material = SubResource( 15 )
texture = ExtResource( 4 )
centered = false

[node name="Bg2" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Merry" type="Sprite" parent="."]
position = Vector2( 290, 176 )
scale = Vector2( 0.749849, 0.749849 )
texture = ExtResource( 1 )

[node name="SheepPath" type="Path2D" parent="."]
curve = SubResource( 9 )

[node name="PathFollow2D" type="PathFollow2D" parent="SheepPath"]
position = Vector2( 581, 218 )
rotation = 0.444423

[node name="BunnyPath" type="Path2D" parent="."]
position = Vector2( 95, 18 )
curve = SubResource( 13 )

[node name="PathFollow2D" type="PathFollow2D" parent="BunnyPath"]
position = Vector2( 509, 218 )
rotation = 0.120297

[node name="BunnyTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SheepTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="BunnyTimer" to="." method="_on_BunnyTimer_timeout"]
[connection signal="timeout" from="SheepTimer" to="." method="_on_SheepTimer_timeout"]
